--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -24,6 +24,90 @@
     "title": "Чем мы занимаемся",
     "description": "Комплексные решения от концепции до реализации.",
     "descriptionLine2": "Один партнёр для всего Вашего цифрового путешествия.",
+    "summary": {
+      "title": "Мы создаём невозможное",
+      "items": [
+        "Любое веб-приложение с любыми функциями (даже безумные идеи с AI)",
+        "Вирусное программное обеспечение любой сложности с возможной интеграцией AI",
+        "Telegram-боты для различных целей (все, что позволяет Ваше воображение, в рамках физики и логики)",
+        "Любая идея, даже кажущаяся невозможной, может быть реализована (если она не нарушает законы логики и физики). Все зависит от бюджета."
+      ]
+    },
+    "landingPages": {
+      "title": "Разработка лендингов",
+      "subtitle": "HTML/Next.js/React",
+      "description": "Высококонверсионные посадочные страницы, которые привлекают внимание и стимулируют действия",
+      "features": [
+        "Современный адаптивный дизайн для всех устройств",
+        "Молниеносная скорость загрузки для улучшения SEO",
+        "Архитектура, ориентированная на конверсию",
+        "Готовность к A/B тестированию",
+        "Встроенная SEO-оптимизация"
+      ]
+    },
+    "webPlatforms": {
+      "title": "Разработка веб-платформ",
+      "subtitle": "React/Next.js + Node.js/Python",
+      "description": "Сложные веб-приложения, созданные для масштабирования и производительности",
+      "features": [
+        "Полнофункциональная кастомная разработка",
+        "Масштабируемая микросервисная архитектура",
+        "Обработка данных в реальном времени",
+        "Продвинутая аутентификация и безопасность",
+        "Интеграция и разработка API"
+      ]
+    },
+    "websiteCloning": {
+      "title": "Клонирование и ребрендинг сайтов",
+      "subtitle": "HTML/Next.js/React",
+      "description": "Быстрое развертывание проверенных концепций сайтов с Вашим брендом",
+      "features": [
+        "Идеальное воссоздание существующих сайтов",
+        "Полный ребрендинг и кастомизация",
+        "Улучшенный функционал и возможности",
+        "Быстрое развертывание",
+        "Включена оптимизация производительности"
+      ]
+    },
+    "telegramBots": {
+      "title": "Разработка Telegram-ботов",
+      "subtitle": "Кастомные боты",
+      "description": "Мощные Telegram-боты с любым функционалом, который Вы можете представить",
+      "features": [
+        "Чат-боты с кастомной логикой и интеграцией AI",
+        "Админ-панели для полного контроля бота",
+        "Системы массовой рассылки и уведомлений",
+        "Интеграция платежей и функции электронной коммерции",
+        "Интеграция с базами данных и управление пользователями",
+        "Кастомные команды и интерактивные меню"
+      ]
+    },
+    "voiceAssistants": {
+      "title": "AI голосовые ассистенты",
+      "subtitle": "Технология голосового управления нового поколения",
+      "description": "AI-голосовые ассистенты, которые понимают и отвечают естественным образом",
+      "features": [
+        "Обработка и понимание естественного языка",
+        "Интеграция с телефонными системами для бизнеса",
+        "Поддержка нескольких языков",
+        "Кастомная личность голоса и ответы",
+        "Интеграция с CRM и базами данных",
+        "Автоматизированное обслуживание клиентов 24/7"
+      ]
+    },
+    "aiWidgets": {
+      "title": "Интеграция AI-виджетов",
+      "subtitle": "Голосовые и текстовые ассистенты",
+      "description": "Бесшовная интеграция AI-ассистента для Вашего сайта или приложения",
+      "features": [
+        "Возможности голосового и текстового чата",
+        "Простая интеграция виджета на сайт",
+        "Кастомное обучение AI на Ваших данных",
+        "Мультиканальная поддержка (веб, мобайл, приложения)",
+        "Аналитика и инсайты разговоров",
+        "Генерация и квалификация лидов"
+      ]
+    },
     "webDev": {
       "title": "Веб-разработка",
       "description": "Современные веб-сайты и приложения на передовых технологиях"
@@ -173,6 +257,12 @@
         }
       },
       "services": {
+        "landingPages": "Разработка лендингов",
+        "webPlatforms": "Разработка веб-платформ",
+        "websiteCloning": "Клонирование и ребрендинг сайтов",
+        "telegramBots": "Разработка Telegram-ботов",
+        "voiceAssistants": "AI голосовые ассистенты",
+        "aiWidgets": "Интеграция AI-виджетов",
         "webDevelopment": "Веб-разработка",
         "aiSolutions": "AI-решения",
         "businessPlanning": "Бизнес-планирование",
@@ -265,6 +355,12 @@
       "legal": "Правовая информация"
     },
     "services": {
+      "landingPages": "Лендинги",
+      "webPlatforms": "Веб-платформы",
+      "websiteCloning": "Клонирование сайтов",
+      "telegramBots": "Telegram-боты",
+      "voiceAssistants": "Голосовые ассистенты",
+      "aiWidgets": "AI-виджеты",
       "webDevelopment": "Веб-разработка",
       "aiSolutions": "AI-решения",
       "businessPlanning": "Бизнес-планирование",
